--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -8,3 +8,21 @@ users.title=Список пользователей
 meals.title=Список еды
 
 common.select=Выбрать
+meal.create=Добавить еду
+meal.edit=Редактировать еду
+meal.save=Сохранить
+meal.datetime=Дата/Время:
+meal.description=Описание:
+meal.calories=Калории:
+meal.cancel=Отмена
+meals.fromDate=C даты:
+meals.toDate=По дату:
+meals.fromTime=С времени:
+meals.toTime=По время:
+meals.filter=Отфильтровать
+meals.addMeal=Добавить еду
+meals.date=Дата
+meals.description=Описание
+meals.calories=Калории
+meals.update=Обновить
+meals.delete=Удалить
