--- a/config/app_ru.properties
+++ b/config/app_ru.properties
@@ -43,6 +43,7 @@ common.search=Искать
 exception.user.duplicateEmail=Пользователь с такой почтой уже есть в приложении
 exception.user.modificationRestriction=Модификация Admin/User запрещена
 exception.meal.duplicateDateTime=У вас уже есть еда с такой датой/временем
+exception.duplicate_email=Пользователь с такой e-почтой уже есть в приложении.
 
 NotEmpty=Поле {0} не должно быть пустым
 NotBlank=Поле {0} не должно быть пустым
